Changes in the source and destination connection page API, as well as changes in the source and destination page API according to new UI
